--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,18 @@
 <resources>
-    <string name="app_name">简易计算器</string>
+    <string name="app_name">微博</string>
     <string name="action_settings">提交作业</string>
     <string name="Hello">hello world!</string>
     <string name="packagename">包名: cn.zju.id21732092.chenzhongqi</string>
     <string name="num">140</string>
     <string name="send">发布</string>
     <string name="hint">有什么新鲜事...</string>
+    <string name="username">用户名</string>
+    <string name="username_hint">请输入微博用户名</string>
+    <string name="password">密码</string>
+    <string name="password_hint">微博密码</string>
+    <string name="interval">更新周期</string>
+    <string name="interval_hint">微博一览更新时间(秒)</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
