G1交完 music2 崩溃 要做跳转

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_world">浙江大学Android课程</string>
+    <string name="stopService">停止服务</string>
+    <string name="submit">提交作业</string>
 </resources>
